Text Underline stays Flat on TextCurve Extrude #70418

Closed
opened 2019-10-01 15:10:45 +02:00 by Christoph Gollok · 9 comments

System Information
Operating system: Manjaro Linux Kernel 5.2.11
Graphics card: AMD HD 7770 1GB

Blender Version
Broken:
version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, type: Release build date: 2019-09-30, 23:06:20
version: 2.80 (sub 75), branch: makepkg, commit date: 2019-07-29 type: Release build date: 2019-07-30, 16:57:38

Short description of error
The Underline on a Text Curve does not get Extruded if the TextCurve Extrude option is used.

Exact steps for others to reproduce the error

  1. Add TextCurve
  2. Toogle Edit Mode
  3. Remove Text
  4. Enable Underline in the TextCurve Font section
  5. Type Text
  6. Set Extrude option in the TextCurve Geometry section to a value > 0

Text does get extruded. The underline stays flat though
TextUnderlineExtrude.png

TextExtrudeUnderline.blend

**System Information** Operating system: Manjaro Linux Kernel 5.2.11 Graphics card: AMD HD 7770 1GB **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, type: Release build date: 2019-09-30, 23:06:20 version: 2.80 (sub 75), branch: makepkg, commit date: 2019-07-29 type: Release build date: 2019-07-30, 16:57:38 **Short description of error** The Underline on a Text Curve does not get Extruded if the TextCurve Extrude option is used. **Exact steps for others to reproduce the error** 1. Add TextCurve 2. Toogle Edit Mode 3. Remove Text 4. Enable Underline in the TextCurve Font section 5. Type Text 6. Set Extrude option in the TextCurve Geometry section to a value > 0 Text does get extruded. The underline stays flat though ![TextUnderlineExtrude.png](https://archive.blender.org/developer/F7783544/TextUnderlineExtrude.png) [TextExtrudeUnderline.blend](https://archive.blender.org/developer/F7783546/TextExtrudeUnderline.blend)

Added subscriber: @CG-2

Added subscriber: @CG-2
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Note also that the font options dont seem to be carried over in modeswitches... [editmode > objectmode > editmode]

Can confirm, checking... Note also that the font options dont seem to be carried over in modeswitches... [editmode > objectmode > editmode]

Added subscriber: @pedroreis.ad

Added subscriber: @pedroreis.ad

Yup, I can also confirm what @lichtwerk is saying, going into edit mode and the switching back to object mode makes it forget the properties that were set. Should a new bug be filed to address this?

Yup, I can also confirm what @lichtwerk is saying, going into edit mode and the switching back to object mode makes it forget the properties that were set. Should a new bug be filed to address this?

This issue was referenced by 629a1c1639

This issue was referenced by 629a1c1639cb82d8cf421f02bd7fd12f5f3415c6

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-10-05 16:50:57 +02:00

In #70418#789738, @pedroreis.ad wrote:
Yup, I can also confirm what @lichtwerk is saying, going into edit mode and the switching back to object mode makes it forget the properties that were set. Should a new bug be filed to address this?

Yes, it would be better in a new report.
Closing this one since it was resolved in the commit 629a1c1639.

> In #70418#789738, @pedroreis.ad wrote: > Yup, I can also confirm what @lichtwerk is saying, going into edit mode and the switching back to object mode makes it forget the properties that were set. Should a new bug be filed to address this? Yes, it would be better in a new report. Closing this one since it was resolved in the commit 629a1c1639.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70418
No description provided.